src/objects/FSL__Work_Rule__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Boolean_Operator__c</fullName>
        <inlineHelpText>Comparar una propiedad de servicio numérica con una propiedad de recurso numérica</inlineHelpText>
        <label>Boolean Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Break_Duration__c</fullName>
        <inlineHelpText>Determina la longitud de los descansos creados. 
Deje este campo vacío si no desea crear descansos.</inlineHelpText>
        <label>Break Duration (minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Break_Start__c</fullName>
        <inlineHelpText>Determina la hora mínima de inicio del descanso (en el formato: {HH:MM}) para crear descansos. 
Deje este campo vacío si no desea crear descansos.</inlineHelpText>
        <label>Break Start</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Crew_Resources_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cuando está marcada, compara el campo Tamaño de plantilla mínimo en la orden de trabajo con los miembros de la plantilla de servicio disponibles. 
En caso contrario, compara el Tamaño de plantilla mínimo con el campo Tamaño de plantilla en Plantilla de servicio.</inlineHelpText>
        <label>Consider Service Crew Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Enable_Overtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Overtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Evaluation_Order__c</fullName>
        <formula>CASE( RecordType.DeveloperName, &quot;Match_Skills&quot;, 2, &quot;Minimum_Rest_Time&quot;, 5, &quot;Overlapping_Shift&quot;, 3 , &quot;Maximum_Work&quot;, 6 , &quot;Maximum_Shift_Length&quot;, 1 , &quot;Minimum_Shift_Length&quot;,1 ,&quot;Match_Fields&quot;, 2, &quot;Do_Not_Overlap_Vacation&quot;, 3, &quot;Match_Constant_Boolean&quot;, 2 , &quot;Resource_Calendar_Availability&quot;, 2, &quot;Maximum_Pain_Shifts&quot;, 6, &quot;Maximum_Consecutive_Work&quot;, 6 ,9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Is_Fixed_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si está marcada, el intervalo entre servicios se basará en el campo de intervalo mínimo, sin cálculos de desplazamientos.</inlineHelpText>
        <label>Fixed Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Match_Constant_Boolean_Value__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Value is True</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Match_Skill_Level__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match Skill Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Maximum_Travel_From_Home_Type__c</fullName>
        <label>Maximum Travel From Home Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distance</fullName>
                    <default>true</default>
                    <label>Distance</label>
                </value>
                <value>
                    <fullName>Travel Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Maximum_Travel_From_Home__c</fullName>
        <inlineHelpText>Determina qué distancia o cuántos minutos el recurso puede desplazarse desde su domicilio para llegar a un servicio</inlineHelpText>
        <label>Maximum Travel From Home</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Minimum_Gap__c</fullName>
        <inlineHelpText>Determina el intervalo mínimo entre servicios. Si el intervalo fijo está activado, determina el intervalo entre los servicios.</inlineHelpText>
        <label>Minimum Gap (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Object_Group_Field__c</fullName>
        <label>Object Group Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Pass_Empty_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pass Empty Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_Group_Field__c</fullName>
        <label>Resource Group Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Resource_Property__c</fullName>
        <label>Resource Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IsActive</fullName>
                </value>
                <value>
                    <fullName>RSE_SEL_Gremio__c</fullName>
                </value>
                <value>
                    <fullName>FSL__Priority__c</fullName>
                </value>
                <value>
                    <fullName>RSE_FOR_Activo_OT_en_curso__c</fullName>
                </value>
                <value>
                    <fullName>RSE_FOR_Activo_OT_mensual__c</fullName>
                </value>
                <value>
                    <fullName>RSE_FOR_Num_Asociado_Mizad__c</fullName>
                </value>
                <value>
                    <fullName>RSE_FOR_Num_Asociado_Urgencias__c</fullName>
                </value>
                <value>
                    <fullName>RSE_FOR_Prioridad_de_franquiciado__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Service_Property__c</fullName>
        <label>Service Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ServiceTerritory</fullName>
                    <default>true</default>
                    <label>ServiceTerritory</label>
                </value>
                <value>
                    <fullName>CSE_SEL_Gremio__c</fullName>
                </value>
                <value>
                    <fullName>CSE_FOR_Calculo_de_Segmentacion__c</fullName>
                </value>
                <value>
                    <fullName>CSE_FOR_Num_Asociado_Mizad__c</fullName>
                </value>
                <value>
                    <fullName>CSE_FOR_Num_Asociado_Urgencias__c</fullName>
                </value>
                <value>
                    <fullName>CSE_FOR_Num_Asignar_Franquiciado__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Service_Schedule_Time_Property__c</fullName>
        <label>Service Schedule Time Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SchedStartTime</fullName>
                    <default>true</default>
                    <label>SchedStartTime</label>
                </value>
                <value>
                    <fullName>SchedEndTime</fullName>
                </value>
                <value>
                    <fullName>SchedStartTime__c</fullName>
                </value>
                <value>
                    <fullName>SchedEndTime__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Service_Time_Operator__c</fullName>
        <label>Service Time Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                    <default>true</default>
                    <label>Before</label>
                </value>
                <value>
                    <fullName>Before or Equal to</fullName>
                </value>
                <value>
                    <fullName>Equal to</fullName>
                </value>
                <value>
                    <fullName>Later than or Equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Service_Time_Property__c</fullName>
        <label>Service Time Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EarliestStartTime</fullName>
                    <default>true</default>
                    <label>EarliestStartTime</label>
                </value>
                <value>
                    <fullName>DueDate</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowStartTime</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowEndTime</fullName>
                </value>
                <value>
                    <fullName>EarliestStartTime__c</fullName>
                </value>
                <value>
                    <fullName>DueDate__c</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowStartTime__c</fullName>
                </value>
                <value>
                    <fullName>ArrivalWindowEndTime__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Start_of_Day__c</fullName>
        <defaultValue>&quot;00:00&quot;</defaultValue>
        <label>Start of Day</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_From_Home__c</fullName>
        <inlineHelpText>Determina la cantidad de minutos antes del inicio de la jornada del calendario del recurso que estará disponible para desplazamientos (a cuenta del recurso).
Cuando está vacía, cualquier cantidad de desplazamiento antes del inicio de la jornada laboral es válida.</inlineHelpText>
        <label>Travel From Home (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_To_Home__c</fullName>
        <inlineHelpText>Determina la cantidad de minutos tras la finalización de la jornada del calendario del recurso que estará disponible para desplazamientos (a cuenta del recurso).
Cuando está vacía, cualquier cantidad de desplazamiento tras la finalización de la jornada laboral es válida.</inlineHelpText>
        <label>Travel To Home (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Working_Location_Enable_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working Location Enable Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Work Rule</label>
    <listViews>
        <fullName>FSL__All_WorkRules</fullName>
        <columns>NAME</columns>
        <columns>FSL__Description__c</columns>
        <columns>FSL__Active__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Rules</pluralLabel>
    <recordTypes>
        <fullName>FSL__Excluded_Resources_Service</fullName>
        <active>true</active>
        <description>Ensures that the assigned resource for the service appointment is not one of the excluded resources</description>
        <label>Field Service - Excluded Resources</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Field_Working_Locations</fullName>
        <active>true</active>
        <description>Match service resource working territories</description>
        <label>Field Service - Working Territories</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Gap_Rule_Service</fullName>
        <active>true</active>
        <description>Ensures that the service resource is available for a service appointment</description>
        <label>Field Service - Service Resource Availability</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Boolean_Service</fullName>
        <active>true</active>
        <description>Validates boolean property is set to true or false</description>
        <label>Field Service - Match Boolean</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Crew_Size_Service</fullName>
        <active>true</active>
        <description>Match crew size to  service parent minimum crew size</description>
        <label>Field Service - Service Crew Resources Availability</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Fields_Service</fullName>
        <active>true</active>
        <description>Matches a property between a service appointment object and a service resource object</description>
        <label>Field Service - Match Fields</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Location_Service</fullName>
        <active>true</active>
        <description>Matches the territory between a service appointment object and a service resource object with Relocation support</description>
        <label>Field Service - Match Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Match_Skills_Service</fullName>
        <active>true</active>
        <description>Matches the required skills for a service appointment with the service resource&apos;s skills</description>
        <label>Field Service - Match Skills</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Max_Travel_From_Home_To_Service</fullName>
        <active>true</active>
        <description>Limits service resources travel distance\time from home</description>
        <label>Field Service - Maximum Travel From Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Required_Resources_Service</fullName>
        <active>true</active>
        <description>Ensures that the assigned resource for the service appointment is one of the required resources</description>
        <label>Field Service - Required Resources</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Service_Visiting_Hours</fullName>
        <active>true</active>
        <description>Ensures that the service appointment is scheduled within the customer defined visiting hours.</description>
        <label>Field Service - Service Appointment Visiting Hours</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__TimeSlot_Designated_Work</fullName>
        <active>true</active>
        <description>Ensures that the service appointment is permitted to be scheduled on the time slots it is spread upon.</description>
        <label>Field Service - TimeSlot Designated Work</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Time_Rule_Service</fullName>
        <active>true</active>
        <description>Limits the scheduling time window according to service appointment datetime properties</description>
        <label>Field Service - Match Time Rule</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FSL__Check_time_rule</fullName>
        <active>true</active>
        <description>If record type is Time_Rule_Service, Service_Schedule_Time_Property__c is SchedEndTime, then Service_Time_Operator__c must be &quot;Before or Equal to&quot;</description>
        <errorConditionFormula>RecordType.DeveloperName  = &apos;Time_Rule_Service&apos; &amp;&amp;  ISPICKVAL(FSL__Service_Schedule_Time_Property__c, &apos;SchedEndTime&apos;)  &amp;&amp; (  !ISPICKVAL(FSL__Service_Time_Operator__c , &apos;Before or Equal to&apos;)  )</errorConditionFormula>
        <errorMessage>Time Operator should be &apos;Before or Equal To&apos; when Service Schedule Time Property is &apos;SchedEndTime&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Greater_than_zero</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Gap_Rule_Service&apos; &amp;&amp;  FSL__Break_Duration__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Break_Duration__c</errorDisplayField>
        <errorMessage>Duration must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Maximum_Travel_Must_Be_Positive</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Max_Travel_From_Home_To_Service&apos; &amp;&amp; FSL__Maximum_Travel_From_Home__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Maximum_Travel_From_Home__c</errorDisplayField>
        <errorMessage>Maximum Travel from Home must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Minimum_Gap_Positive</fullName>
        <active>true</active>
        <description>Resource availability, min gap shouldn&apos;t be negative</description>
        <errorConditionFormula>RecordType.DeveloperName  = &apos;Gap_Rule_Service&apos;  &amp;&amp;  FSL__Minimum_Gap__c &lt; 0</errorConditionFormula>
        <errorDisplayField>FSL__Minimum_Gap__c</errorDisplayField>
        <errorMessage>Minimum gap should not be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Start_Of_Day_Time_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN ( FSL__Start_of_Day__c ) != 0, 
NOT( 
REGEX( FSL__Start_of_Day__c , &quot;^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;) 
)
)</errorConditionFormula>
        <errorDisplayField>FSL__Start_of_Day__c</errorDisplayField>
        <errorMessage>Time must be in the following format: HH:MM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Time_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN ( FSL__Break_Start__c ) != 0, 
NOT( 
REGEX( FSL__Break_Start__c , &quot;^(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;) 
)
)</errorConditionFormula>
        <errorDisplayField>FSL__Break_Start__c</errorDisplayField>
        <errorMessage>Time must be in the following format: HH:MM</errorMessage>
    </validationRules>
</CustomObject>